EPL-183: Change test configuration in build.gradle