@@ -107,6 +107,7 @@ test {
     forkEvery 50
     minHeapSize = "512m"
     maxHeapSize = "2048m"
+    jvmArgs '-XX:MaxPermSize=256m'
 }
 
 gradlePlugin {
